# tablerock

./: .gitignore  .gitleaksignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  deny.toml  mise.toml
.config/: nextest.toml
.github/: AGENTS.md  actionlint.yaml
crates/tablerock-cli/: Cargo.toml  build.rs
crates/tablerock-cli/src/: effects.rs  file_effects.rs  import_apply.rs  import_csv.rs  ingress.rs  input.rs  lib.rs  main.rs  pg_process.rs  projection.rs  run.rs  stream_export.rs  telemetry.rs  tool_discovery.rs
crates/tablerock-cli/tests/: import_apply_real.rs  ingress.rs  input_mapping.rs  pg_dump_real.rs  process_contract.rs  pty_lifecycle.rs  stream_export_real.rs  termrock_session.rs
crates/tablerock-cli/tests/support/: mod.rs
crates/tablerock-core/: Cargo.toml
crates/tablerock-core/src/: catalog.rs  command.rs  connection_url.rs  copy_projection.rs  ddl.rs  diagnostic.rs  editability.rs  id.rs  lib.rs  mutation.rs  named_params.rs  operation.rs  page.rs  profile.rs  profile_aggregate.rs  profile_list.rs  reconnect.rs  redis_command.rs  result_store.rs  revision.rs  role_change.rs  saved_filter.rs  secret.rs  service.rs  sql_analysis.rs  sql_format.rs  startup_action.rs  support.rs  value.rs
crates/tablerock-core/tests/: architecture.rs  catalog.rs  command.rs  diagnostic.rs  identity.rs  mutation.rs  operation.rs  page.rs  profile.rs  profile_aggregate.rs  profile_list.rs  profile_snapshot.rs  redaction_audit.rs  redis.rs  result_store.rs  screen_manifest.rs  secret.rs  service.rs  support_bundle.rs  value_capability.rs
crates/tablerock-engine/: Cargo.toml
crates/tablerock-engine/src/: adapter.rs  browse_plan.rs  catalog.rs  clickhouse.rs  clickhouse_mutation.rs  ident.rs  lib.rs  postgres.rs  postgres_mutation.rs  redis.rs  relation_structure.rs  runtime.rs  secret_resolution.rs  service.rs  session_pool.rs  ssh_tunnel.rs  startup_run.rs  temporal.rs
crates/tablerock-engine/tests/: adapter_contract.rs  clickhouse_real.rs  describe_server_real.rs  driver_runtime.rs  engine_service.rs  operation_registry.rs  performance_real.rs  postgres_real.rs  redis_real.rs  session_registry.rs  ssh_tunnel_real.rs  startup_actions_real.rs  three_engine_overlap_real.rs  tls_support.rs
crates/tablerock-engine/tests/support/: mod.rs
crates/tablerock-ffi/: Cargo.toml
crates/tablerock-ffi/src/: bridge.rs  error.rs  ids.rs  lib.rs  page_limits.rs  runtime.rs
crates/tablerock-ffi/tests/: bridge_real.rs  conformance.rs  facade.rs  page_fixture_resources.rs
crates/tablerock-files/: Cargo.toml
crates/tablerock-files/src/: csv_import.rs  lib.rs  stream_export.rs
crates/tablerock-persistence/: Cargo.toml  MIGRATING.md
crates/tablerock-persistence/migration-docs/: 0001-bootstrap.md  0002-support-facts.md  0003-saved-profiles.md  0004-profile-list-index.md  0005-profile-engine-list-index.md  0006-profile-group-list-index.md  0007-environment-tag.md  0008-query-history.md  0009-saved-queries-and-session-intent.md  0010-column-layout.md  0011-ssh-properties-and-startup-actions.md  0012-ssh-use-agent-preference.md  0013-saved-filter-library.md  0014-profile-groups.md  0015-profile-group-ordering.md  0016-history-retention.md  0017-native-window-session-intent.md  0018-retire-support-facts.md
crates/tablerock-persistence/migrations/: 0001-bootstrap.sql  0002-support-facts.sql  0003-saved-profiles.sql  0004-profile-list-index.sql  0005-profile-engine-list-index.sql  0006-profile-group-list-index.sql  0007-environment-tag.sql  0008-query-history.sql  0009-saved-queries-and-session-intent.sql  0010-column-layout.sql  0011-ssh-properties-and-startup-actions.sql  0012-ssh-use-agent-preference.sql  0013-saved-filter-library.sql  0014-profile-groups.sql  0015-profile-group-ordering.sql  0016-history-retention.sql  0017-native-window-session-intent.sql  0018-retire-support-facts.sql
crates/tablerock-persistence/src/: column_layout_store.rs  history_store.rs  lib.rs  native_window_intent_store.rs  profile_store.rs  recovery.rs  saved_filter_store.rs  saved_query_store.rs  session_intent_store.rs  sql_file.rs
crates/tablerock-persistence/tests/: actor.rs  column_layout.rs  compatibility.rs  crash_recovery.rs  group_registry.rs  profile_create.rs  query_history.rs  recovery.rs  saved_filter_library.rs  saved_queries_and_session_intent.rs
crates/tablerock-tools/: Cargo.toml
crates/tablerock-tools/src/: lib.rs  postgres.rs
crates/tablerock-tui/: Cargo.toml
crates/tablerock-tui/src/: effect.rs  keymap.rs  lib.rs  message.rs  model.rs  reconnect.rs  subscriptions.rs  update.rs  view.rs
crates/tablerock-tui/src/model/: catalog.rs  completion.rs  copy_format.rs  editor.rs  grid.rs  history.rs  inspector.rs  mod.rs  mutation_draft.rs  mutation_plan_build.rs  profiles.rs  query_editor.rs  redis_command.rs  redis_key_view.rs  redis_namespace.rs  redis_stage.rs  result_sections.rs  saved_filter.rs  saved_query.rs  structure_ddl.rs  vim_mode.rs  workbench.rs
crates/tablerock-tui/tests/: architecture.rs  non_color_cues.rs  shell.rs  termrock_consumer.rs
docs/: README.md  prompt.md  support-matrix.md
native/: Package.swift  README.md
plans/: 001-ci-verification-baseline.md  002-engine-sessions-and-arbitrary-queries.md  003-catalog-listing-service.md  004-profile-domain-and-secret-resolution.md  005-tui-effect-executor-and-engine-bridge.md  006-connection-experience-screens.md  007-workbench-shell-and-session-lifecycle.md  008-termrock-virtualgrid.md  009-postgresql-read-only-slice.md  010-termrock-textarea-completionmenu.md  011-sql-editor-workbench.md  012-grid-controls-and-copy.md  013-postgresql-writes-and-admin.md  014-clickhouse-slice.md  015-redis-slice.md  016-daily-workflows-and-data-movement.md  017-scoped-parity-expansion.md  018-tui-hardening-release-gate.md  019-uniffi-bridge-proof.md  020-native-macos-vertical-slice.md  021-native-parity-and-closure.md  022-preview-cicd-and-homebrew-tap.md  README.md
scripts/: build-native-app.sh  build-universal-staticlib.sh  build-xcframework.sh  capture-native-appearance.sh  generate-swift-bindings.sh  (+22 more)
(+784 files in other folders)
