[workspace]
members = ["crates/tablerock-cli", "crates/tablerock-core", "crates/tablerock-engine", "crates/tablerock-persistence", "crates/tablerock-tui"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
license = "Apache-2.0"
repository = "https://github.com/tailrocks/tablerock"

[workspace.dependencies]
bytes = "=1.12.1"
crossterm = { version = "0.29.0", features = ["event-stream"] }
caseless = "=0.2.2"
clickhouse = { version = "=0.15.1", default-features = false, features = ["lz4", "rustls-tls-native-roots", "rustls-tls-ring"] }
futures-util = "0.3.32"
ratatui-core = "0.1.2"
ratatui-crossterm = { version = "0.1.2", default-features = false, features = ["crossterm_0_29"] }
redis = { version = "=1.4.0", default-features = false, features = ["connection-manager", "tokio-rustls-comp"] }
rustls = { version = "=0.23.42", default-features = false, features = ["ring", "std", "tls12"] }
serde_json = { version = "=1.0.150", default-features = false, features = ["arbitrary_precision", "std"] }
sha2 = { version = "=0.11.0", default-features = false }
termrock = { version = "=0.11.0", git = "https://github.com/tailrocks/termrock.git", rev = "5ab74a2d03a4bec50ebe5fbc90439ae607e0215d", features = ["crossterm", "serde"] }
tokio = { version = "=1.52.4", features = ["macros", "rt", "signal", "sync", "time"] }
tokio-postgres = "=0.7.18"
tokio-postgres-rustls = { version = "=0.14.0", features = ["native-certs", "ring"] }
turso = { version = "=0.7.0", default-features = false }
unicode-normalization = { version = "=0.1.25", default-features = false, features = ["std"] }
zeroize = { version = "=1.9.0", default-features = false, features = ["alloc"] }

[workspace.lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "deny", priority = -1 }

[workspace.lints.clippy]
correctness = "deny"
suspicious = "deny"
perf = "deny"
