[package]
name = "tablerock-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "TableRock command-line and terminal adapters"

[dependencies]
crossterm.workspace = true
tablerock-tui = { version = "=0.1.0", path = "../tablerock-tui" }
termrock = { workspace = true, features = ["crossterm"] }

[lints]
workspace = true
