[package]
name = "tablerock-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "TableRock command-line and terminal adapters"

[dependencies]
crossterm.workspace = true
futures-util.workspace = true
ratatui-core.workspace = true
ratatui-crossterm.workspace = true
tablerock-core = { version = "=0.1.0", path = "../tablerock-core" }
tablerock-engine = { version = "=0.1.0", path = "../tablerock-engine" }
tablerock-persistence = { version = "=0.1.0", path = "../tablerock-persistence" }
tablerock-tui = { version = "=0.1.0", path = "../tablerock-tui" }
termrock.workspace = true
tokio.workspace = true

[dev-dependencies]
portable-pty = "0.9.0"

[lints]
workspace = true
