[package]
name = "tablerock-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Owned domain contracts shared by TableRock engines and clients"

[dependencies]
caseless.workspace = true
sqlparser.workspace = true
unicode-normalization.workspace = true
zeroize.workspace = true

[lints]
workspace = true
