[package]
name = "tablerock-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Synchronous UniFFI facade over TableRock engine for native macOS"

[features]
bindgen-cli = ["uniffi/cli"]

[[bin]]
name = "uniffi-bindgen-tablerock"
path = "src/bin/uniffi-bindgen-tablerock.rs"
required-features = ["bindgen-cli"]

[lib]
name = "tablerock_ffi"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
tablerock-core = { version = "=0.1.0", path = "../tablerock-core" }
tablerock-engine = { version = "=0.1.0", path = "../tablerock-engine" }
tablerock-files = { version = "=0.1.0", path = "../tablerock-files" }
tablerock-persistence = { version = "=0.1.0", path = "../tablerock-persistence" }
tablerock-tools = { version = "=0.1.0", path = "../tablerock-tools" }
tokio = { workspace = true, features = ["rt-multi-thread"] }
uniffi = { version = "=0.32.0", default-features = false }
serde_json.workspace = true

[dev-dependencies]
redis = { workspace = true }
testcontainers = { version = "=0.27.3", default-features = false }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints.rust]
# UniFFI scaffolding requires `unsafe` at the C ABI boundary. Core crates remain forbid.
unsafe_code = "allow"
rust_2018_idioms = { level = "deny", priority = -1 }

[lints.clippy]
correctness = "deny"
suspicious = "deny"
perf = "deny"
