[package]
name = "tablerock-files"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sha2.workspace = true
tablerock-core = { version = "=0.1.0", path = "../tablerock-core" }

[lints]
workspace = true
