[package]
name = "tablerock-persistence"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Single-owner local persistence actor for TableRock"

[dependencies]
tokio.workspace = true
turso.workspace = true

[lints]
workspace = true
