[package]
name = "tablerock-persistence"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Single-owner local persistence actor for TableRock"

[dependencies]
tablerock-core = { version = "=0.1.0", path = "../tablerock-core" }
sha2.workspace = true
tokio.workspace = true
turso.workspace = true
zeroize.workspace = true

[lints]
workspace = true
