[package]
name = "tablerock-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Supervised external-tool adapters for TableRock clients"

[dependencies]
tokio.workspace = true

[lints]
workspace = true
